<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartPage">

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:onClick="signIn"
        android:layout_marginTop="@dimen/_400sdp"
        android:text="@string/Sign_in"
        android:textSize="@dimen/_14sdp" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/Sign_up"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/txt_skip"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:text="@string/skip"
        android:textStyle="bold"
        android:onClick="Skip"
        android:textSize="@dimen/_14sdp" />

</LinearLayout>